fixed a few styling errors in navigation bar and overflow errors

--- a/frontend/src/Pages/app_main/classes/Classes.module.css
+++ b/frontend/src/Pages/app_main/classes/Classes.module.css
@@ -5,9 +5,15 @@
   flex-direction: row;
   gap: 2rem;
   width: 100%;
+  overflow-x: hidden;
+}
+body {
+  overflow-x: hidden;
 }
 .mainPanelPlaceholder {
   width: 100%;
+  max-height: 100vh;
+  overflow: auto;
 }
 
 .mainPanel {
@@ -65,10 +71,12 @@
 }
 
 @media (max-width: 615px) {
-  .mainPanel {
-    padding: 2rem;
-  }
+  .mainPanel,
   .gridClasses {
     padding: 2rem;
+  }
+
+  .utilityPanel {
+    padding-left: 2rem;
   }
 }
