--- a/frontend/src/Pages/app_main/dashboard/Dashboard.module.css
+++ b/frontend/src/Pages/app_main/dashboard/Dashboard.module.css
@@ -8,6 +8,8 @@
 }
 .mainPanelPlaceholder {
   width: 100%;
+  max-height: 100vh;
+  overflow: auto;
 }
 
 .mainPanel {
@@ -25,7 +27,7 @@
   color: var(--color-grey-500);
 }
 
-.utilityPanel{
+.utilityPanel {
   position: relative;
 }
 
